code refactoring and adding Exception handler