@@ -1,5 +1,8 @@
 package com.example.backend.Service;
 
+import com.example.backend.Exception.EntityNotFoundException;
+import com.example.backend.Exception.HangTicketException;
+import com.example.backend.Exception.TicketPurchaseNotValidException;
 import com.example.backend.Repository.TicketRepository;
 import com.example.backend.Repository.TicketSuspensionRepository;
 import com.example.backend.Repository.UserRepository;
@@ -13,6 +16,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
+import java.time.temporal.ChronoUnit;
+import java.time.temporal.TemporalUnit;
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -29,164 +36,146 @@ public class TicketServiceImpl implements TicketService {
 
     public TicketDto addTicket(Long userId, TicketType ticketType) {
 
-        Optional<User> user = userRepository.findById(userId);
+        User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException(User.class, userId));
         LocalDateTime expirationAt;
         LocalDateTime issuedAt = LocalDateTime.now();
-        List<GymTicket> gymTicketList = ticketRepository.findAllByUser(user.get());
-        List<GymTicket> criticalList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(issuedAt) && gymTicket.getIssuedAt().isBefore(issuedAt)).collect(Collectors.toList());
-        List<GymTicket> potentialTicketList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(issuedAt)).collect(Collectors.toList());
-        if (user.isPresent()) {
-            if (criticalList.size() == 0) {
-                if (ticketType == TicketType.ONE_MONTH) {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(issuedAt.plusMonths(1))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = issuedAt.plusMonths(1);
-                } else if (ticketType == TicketType.THREE_MONTH) {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(issuedAt.plusMonths(3))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = issuedAt.plusMonths(3);
-                } else {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(issuedAt.plusYears(1))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = issuedAt.plusYears(1);
-                }
+        List<GymTicket> gymTicketList = ticketRepository.findAllByUser(user);
+        List<GymTicket> criticalList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(issuedAt) && gymTicket.getIssuedAt().isBefore(issuedAt)).toList();
+        List<GymTicket> potentialTicketList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(issuedAt)).toList();
+        if (!criticalList.isEmpty()) {
+            throw new TicketPurchaseNotValidException("You currently have a ticket purchased");
+        }
+        if (ticketType == TicketType.ONE_MONTH) {
+            if (isAnyOtherTicketWithinPeriode(issuedAt, potentialTicketList, 1, ChronoUnit.MONTHS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 1 month");
+            }
+            expirationAt = issuedAt.plusMonths(1);
+        } else if (ticketType == TicketType.THREE_MONTH) {
+            if (isAnyOtherTicketWithinPeriode(issuedAt, potentialTicketList, 3, ChronoUnit.MONTHS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 3 months");
+            }
+            expirationAt = issuedAt.plusMonths(3);
+        } else {
+            if (isAnyOtherTicketWithinPeriode(issuedAt, potentialTicketList, 1, ChronoUnit.YEARS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 1 year");
+            }
+            expirationAt = issuedAt.plusYears(1);
+        }
 
-                GymTicket gymTicket = GymTicket.builder()
-                        .ticketType(ticketType)
-                        .issuedAt(issuedAt)
-                        .expirationAt(expirationAt)
-                        .user(user.get())
-                        .build();
+        GymTicket gymTicket = GymTicket.builder()
+                .ticketType(ticketType)
+                .issuedAt(issuedAt)
+                .expirationAt(expirationAt)
+                .user(user)
+                .build();
 
-                GymTicket savedGymTicket = ticketRepository.save(gymTicket);
-                return TicketMapper.mapGymTicketToTicketDTo(savedGymTicket);
+        GymTicket savedGymTicket = ticketRepository.save(gymTicket);
+        return TicketMapper.mapGymTicketToTicketDTo(savedGymTicket);
+
+    }
+
+    public TicketDto addTicket(Long userId, TicketType ticketType, LocalDateTime plannedIssuedAt) {
+
+
+        User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException(User.class, userId));
+        List<GymTicket> gymTicketList = ticketRepository.findAllByUser(user);
+        List<GymTicket> criticalList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(plannedIssuedAt) && gymTicket.getIssuedAt().isBefore(plannedIssuedAt)).collect(Collectors.toList());
+        List<GymTicket> potentialTicketList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(plannedIssuedAt)).collect(Collectors.toList());
+        LocalDateTime expirationAt;
+
+        if (!criticalList.isEmpty()) {
+            throw new TicketPurchaseNotValidException("You currently have a ticket purchased");
+        }
+
+        if (ticketType == TicketType.ONE_MONTH) {
+            if (isAnyOtherTicketWithinPeriode(plannedIssuedAt, potentialTicketList, 1, ChronoUnit.MONTHS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 1 month of your intended purchase date");
+            }
+            expirationAt = plannedIssuedAt.plusMonths(1);
+        } else if (ticketType == TicketType.THREE_MONTH) {
+            if (isAnyOtherTicketWithinPeriode(plannedIssuedAt, potentialTicketList, 3, ChronoUnit.MONTHS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 3 months of your intended purchase date");
 
             }
+            expirationAt = plannedIssuedAt.plusMonths(3);
+        } else {
+            if (isAnyOtherTicketWithinPeriode(plannedIssuedAt, potentialTicketList, 1, ChronoUnit.YEARS)) {
+                throw new TicketPurchaseNotValidException("you already have a ticket that starts within 1 year of your intended purchase date");
+
+            }
+            expirationAt = plannedIssuedAt.plusYears(1);
         }
-        return null;
+
+        GymTicket gymTicket = GymTicket.builder()
+                .ticketType(ticketType)
+                .issuedAt(plannedIssuedAt)
+                .expirationAt(expirationAt)
+                .user(user)
+                .build();
+
+        GymTicket savedGymTicket = ticketRepository.save(gymTicket);
+        return TicketMapper.mapGymTicketToTicketDTo(savedGymTicket);
 
 
     }
 
-    public TicketDto addTicket(Long userId, TicketType ticketType, LocalDateTime dateTime) {
-
-        LocalDateTime issuedAt = LocalDateTime.now();
-        Optional<User> user = userRepository.findById(userId);
-        List<GymTicket> gymTicketList = ticketRepository.findAllByUser(user.get());
-        List<GymTicket> criticalList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(dateTime) && gymTicket.getIssuedAt().isBefore(dateTime)).collect(Collectors.toList());
-        List<GymTicket> potentialTicketList = gymTicketList.stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(dateTime)).collect(Collectors.toList());
-        LocalDateTime expirationAt;
-        if (user.isPresent()) {
-            if (criticalList.size() == 0) {
-                if (ticketType == TicketType.ONE_MONTH) {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(dateTime.plusMonths(1))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = dateTime.plusMonths(1);
-                } else if (ticketType == TicketType.THREE_MONTH) {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(dateTime.plusMonths(3))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = dateTime.plusMonths(3);
-                } else {
-                    if (potentialTicketList.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(dateTime.plusYears(1))).collect(Collectors.toList()).size() != 0) {
-                        return null;
-                    }
-                    expirationAt = dateTime.plusYears(1);
-                }
-
-                GymTicket gymTicket = GymTicket.builder()
-                        .ticketType(ticketType)
-                        .issuedAt(dateTime)
-                        .expirationAt(expirationAt)
-                        .user(user.get())
-                        .build();
-
-                GymTicket savedGymTicket = ticketRepository.save(gymTicket);
-                return TicketMapper.mapGymTicketToTicketDTo(savedGymTicket);
-            }
-
-        }
-        return null;
-
-
+    private static boolean isAnyOtherTicketWithinPeriode(LocalDateTime offset, List<GymTicket> potentialTickets, int amount, TemporalUnit temporalUnit) {
+        return potentialTickets.stream().anyMatch(gymTicket -> gymTicket.getIssuedAt().isBefore(offset.plus(amount, temporalUnit)));
     }
 
     @Override
     public List<TicketDto> getAllUserTickets(Long userId) {
-        Optional<User> optionalUser = userRepository.findById(userId);
-        if (optionalUser.isPresent()) {
-            List<GymTicket> gymTicketList = ticketRepository.findAllByUser(optionalUser.get());
-            if (!gymTicketList.isEmpty()) {
-                return gymTicketList.stream().map(TicketMapper::mapGymTicketToTicketDTo).collect(Collectors.toList());
+        User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException(User.class, userId));
 
-            }
+        List<GymTicket> gymTicketList = ticketRepository.findAllByUser(user);
+        if (!gymTicketList.isEmpty()) {
+            return gymTicketList.stream().map(TicketMapper::mapGymTicketToTicketDTo).collect(Collectors.toList());
+
         }
-        return null;
-    }
+        return Collections.emptyList();
 
+    }
 
 
     @Override
     public TicketDto getSingleTicket(Long ticketId) {
-        Optional<GymTicket> optionalGymTicket = ticketRepository.findById(ticketId);
-        return optionalGymTicket.map(TicketMapper::mapGymTicketToTicketDTo).orElse(null);
+        GymTicket gymTicket = ticketRepository.findById(ticketId).orElseThrow(() -> new EntityNotFoundException(GymTicket.class, ticketId));
+        return TicketMapper.mapGymTicketToTicketDTo(gymTicket);
     }
 
     @Override
     public String hangYourTicket(Long userId) {
-        Optional<User> optionalUser = userRepository.findById(userId);
-        if (optionalUser.isEmpty()) {
-            return "User with this id not found";
-        }
+        User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException(User.class, userId));
+
         LocalDateTime now = LocalDateTime.now();
-        Optional<GymTicket> optionalPresentGymTicket = ticketRepository.findAllByUserAndIssuedAtBefore(optionalUser.get(), now).stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(now)).findFirst();
-        if (optionalPresentGymTicket.isPresent()) {
-            List<GymTicket> futureTickets = ticketRepository.findAllByUserAndIssuedAtAfter(optionalUser.get(), optionalPresentGymTicket.get().getExpirationAt());
-            if (futureTickets.size() == 0) {
-                optionalPresentGymTicket.get().setExpirationAt(optionalPresentGymTicket.get().getExpirationAt().plusWeeks(1));
-                TicketSuspension ticketSuspension = TicketSuspension.builder()
-                        .issuedAt(now)
-                        .expiredAt(now.plusMinutes(1))
-                        .gymTicket(optionalPresentGymTicket.get())
-                        .build();
-                ticketSuspensionRepository.save(ticketSuspension);
-                optionalPresentGymTicket.get().setSuspension(ticketSuspension);
-                ticketRepository.save(optionalPresentGymTicket.get());
-                return "Your ticket has been successfully suspended for a week";
-            }
-            if (futureTickets.stream().filter(gymTicket -> gymTicket.getIssuedAt().isBefore(optionalPresentGymTicket.get().getExpirationAt().plusWeeks(1))).collect(Collectors.toList()).size() == 0) {
-
-                optionalPresentGymTicket.get().setExpirationAt(optionalPresentGymTicket.get().getExpirationAt().plusWeeks(1));
-                TicketSuspension ticketSuspension = TicketSuspension.builder()
-                        .issuedAt(now)
-                        .expiredAt(now.plusWeeks(1))
-                        .gymTicket(optionalPresentGymTicket.get())
-                        .build();
-                ticketSuspensionRepository.save(ticketSuspension);
-                optionalPresentGymTicket.get().setSuspension(ticketSuspension);
-                ticketRepository.save(optionalPresentGymTicket.get());
-                return "Your ticket has been successfully suspended for a week";
-
-            }
-            return "Bad request. You have another ticket in this time period";
-
+        Optional<GymTicket> optionalPresentGymTicket = ticketRepository.findAllByUserAndIssuedAtBefore(user, now).stream().filter(gymTicket -> gymTicket.getExpirationAt().isAfter(now)).findFirst();
+        if (optionalPresentGymTicket.isEmpty()) {
+            throw new HangTicketException("You don't have currently ticket");
         }
-        return "You don't currently have a ticket";
+        List<GymTicket> futureTickets = ticketRepository.findAllByUserAndIssuedAtAfter(user, optionalPresentGymTicket.get().getExpirationAt());
+        if (futureTickets.isEmpty() || futureTickets.stream().noneMatch(gymTicket -> gymTicket.getIssuedAt().isBefore(optionalPresentGymTicket.get().getExpirationAt().plusWeeks(1)))) {
+            optionalPresentGymTicket.get().setExpirationAt(optionalPresentGymTicket.get().getExpirationAt().plusWeeks(1));
+            TicketSuspension ticketSuspension = TicketSuspension.builder()
+                    .issuedAt(now)
+                    .expiredAt(now.plusMinutes(1))
+                    .gymTicket(optionalPresentGymTicket.get())
+                    .build();
+            ticketSuspensionRepository.save(ticketSuspension);
+            optionalPresentGymTicket.get().setSuspension(ticketSuspension);
+            ticketRepository.save(optionalPresentGymTicket.get());
+            return "Your ticket has been successfully suspended for a week";
+        }
+        throw new HangTicketException("You have another ticket in this time period");
+
     }
 
     @Override
     public TicketDto getCurrentUserTicket(Long userId) {
-        Optional<User> optionalUser = userRepository.findById(userId);
-        if (optionalUser.isPresent()) {
-            Optional<GymTicket> gymTicket = ticketRepository.findAllByUserAndIssuedAtBefore(optionalUser.get(), LocalDateTime.now()).stream().filter(gymTicket1 -> gymTicket1.getExpirationAt().isAfter(LocalDateTime.now())).findFirst();
-            if (gymTicket.isPresent()) {
-                return TicketMapper.mapGymTicketToTicketDTo(gymTicket.get());
-            }
-        }
-        return null;
+        User user = userRepository.findById(userId).orElseThrow(() -> new EntityNotFoundException(User.class, userId));
+
+        Optional<GymTicket> gymTicket = ticketRepository.findAllByUserAndIssuedAtBefore(user, LocalDateTime.now()).stream().filter(gymTicket1 -> gymTicket1.getExpirationAt().isAfter(LocalDateTime.now())).findFirst();
+        return gymTicket.map(TicketMapper::mapGymTicketToTicketDTo).orElse(null);
+
     }
+
 }
